--- a/bindu.bib
+++ b/bindu.bib
@@ -11,7 +11,7 @@
 }%!
 
 @article{snell2016brajinbrief,
-  author    = {Rupert Snell},
+  author    = {Snell, Rupert},
   title     = {Braj in Brief: An Introduction to Literary Braj Bhāṣā},
   year      = {2016},
   publisher = {Hindi Urdu Flagship, Department of Asian Studies},
@@ -21,7 +21,7 @@
 }%!
 
 @article{huson2004,
-  author    = {Daniel H. Huson and Mike Steel},
+  author    = {Huson, Daniel H. and Steel, Mike},
   title     = {Phylogenetic trees based on gene content},
   journal   = {Bioinformatics},
   year      = {2004},
@@ -195,7 +195,7 @@ keywords={seclit},
 @misc{goraksasiddhantasamgraha1973,
   title        = {Gorakṣasiddhāntasaṃgraha},
   subtitle     = {Gorakṣasiddhāntasaṃgraha},
-  editor       = {Janārdana Śāstrī Pāṇḍeya},
+  editor       = {Śāstrī Pāṇḍeya, Janārdana},
   year         = 1973,
   howpublished = {Vol. 110. Series: Saraswatībhavana-Granthamālā},
   publisher    = {Varanaseya Sanskrit Vishvavidyalaya},
@@ -223,7 +223,7 @@ keywords={seclit},
 }%!
 
 @article{riegger2018,
-  author = {Manfred Riegger},
+  author = {Riegger, Manfred},
   title = {Interreligiöser Dialog im Angesicht von Heterogenität: Differenzhermeneutische Grundlegung und Perspektiven für religiöse Bildung},
   journal = {Münchner Theologische Zeitschrift (MThZ)},
   volume = {69},
@@ -326,7 +326,7 @@ keywords={seclit},
 }%!
 
 @book{srivastava2017lal,
-  author       = {Raju Srivastava},
+  author       = {Srivastava, Raju },
   title        = {Lal Chand Research Indological Research Center Manuscript Catalog - DAV College Chandigarh},
   year         = {2017},
   publisher    = {Indological Research Center, DAV College},
@@ -383,7 +383,7 @@ keywords={seclit},
 }%!
 
 @book{haas2018vom,
-  author    = {Dominik Haas},
+  author    = {Haas, Dominik},
   title     = {Vom Feueraltar zum Yoga. Kohärenz und Konzept der Kaṭha-Upaniṣad},
   school    = {Universität Wien},
   year      = {2018},
@@ -414,7 +414,7 @@ keywords={seclit},
 %}
 
 @book{oberlies2012,
-  author    = {Thomas Oberlies},
+  author    = {Oberlies, Thomas},
   title     = {Hinduismus: Eine Einführung},
   publisher = {FISCHER Taschenbuch},
   year      = {2012},
@@ -428,7 +428,7 @@ keywords={seclit},
 @incollection{hacker1979,
   author    = {Hacker, Paul},
   title     = {Inklusivismus},
-  editor    = {Gerhardt Oberhammer},
+  editor    = {Oberhammer, Gerhardt},
   booktitle = {Inklusivismus: Eine indische Denkform},
   publisher = {Institut für Indologie der Universität Wien, Sammlung De Nobili; Commission Agents E.J. Brill},
   address   = {Wien},
@@ -437,7 +437,7 @@ keywords={seclit},
 }%!
 
 @book{newcataloguscatalogorum8,
-  author      = {V. Raghavan and S. P. Narang and D. C. Bhattacharya},
+  author      = {Raghavan, V. and Narang, S. P. and Bhattacharya, D. C.},
   title       = {New Catalogus Catalogorum: An Alphabetical Register of Sanskrit and Allied Works and Authors},
   volume      = {8},
   year        = {2007},
@@ -447,7 +447,7 @@ keywords={seclit},
 }%!
 
 @book{newcataloguscatalogorum9,
-  author     = {V. Raghavan and S. P. Narang and D. C. Bhattacharya},
+  author     = {Raghavan, V. and Narang, S. P. and Bhattacharya, D. C.},
   title      = {New Catalogus Catalogorum: An Alphabetical Register of Sanskrit and Allied Works and Authors},
   volume     = {9},
   year       = {2007},
@@ -457,7 +457,7 @@ keywords={seclit},
 }%!
 
 @book{newcataloguscatalogorum10,
-  author = {V. Raghavan and S. P. Narang and D. C. Bhattacharya},
+  author = {Raghavan, V. and Narang, S. P. and Bhattacharya, D. C.},
   title = {New Catalogus Catalogorum: An Alphabetical Register of Sanskrit and Allied Works and Authors},
   volume = {10},
   year = {2007},
@@ -467,7 +467,7 @@ keywords={seclit},
 }%!
 
 @book{newcataloguscatalogorum15,
-  author = {V. Raghavan and S. P. Narang and D. C. Bhattacharya},
+  author = {Raghavan, V. and Narang, S. P. and Bhattacharya, D. C.},
   title = {New Catalogus Catalogorum: An Alphabetical Register of Sanskrit and Allied Works and Authors},
   volume = {15},
   year = {2007},
@@ -477,7 +477,7 @@ keywords={seclit},
 }%!
 
 @book{newcataloguscatalogorum22,
-  author = {V. Raghavan and S. P. Narang and D. C. Bhattacharya},
+  author = {Raghavan, V. and Narang, S. P. and Bhattacharya, D. C.},
   title = {New Catalogus Catalogorum: An Alphabetical Register of Sanskrit and Allied Works and Authors},
   volume = {22},
   year = {2007},
@@ -488,7 +488,7 @@ keywords={seclit},
 
 
 @book{baroda1950,
-  author    = {Raghavan Nambiar Siromani},
+  author    = {Nambiar Siromani, Raghavan},
   title     = {An Alphabetical List of Manuscripts in the Oriental Institute Baroda, Vol. II},
   year      = {1950},
   publisher = {Oriental Institute},
@@ -517,7 +517,7 @@ keywords={seclit},
 }%!
 
 @book{newcataloguscatalogorum23,
-  author = {V. Raghavan and S. P. Narang and D. C. Bhattacharya},
+  author = {Raghavan, V. and Narang, S. P. and Bhattacharya, D. C.},
   title = {New Catalogus Catalogorum: An Alphabetical Register of Sanskrit and Allied Works and Authors},
   volume = {23},
   year = {2007},
@@ -527,7 +527,7 @@ keywords={seclit},
 }%!
 
 @book{hall1859,
-  author = {Fitzedward Hall},
+  author = {Hall, Fitzedward},
   title = {A Contribution towards an Index to the Bibliography of the Indian Philosophical Systems},
   year = {1859},
   publisher = {C. B. Lewis, Baptist Mission Press},
@@ -536,7 +536,7 @@ keywords={seclit},
 }%!
 
 @book{calcutta1900,
-  author       = {H. Sastri},
+  author       = {Sastri, H.},
   title        = {A Descriptive Catalogue of Sanskrit Manuscripts of The Calcutta Sanskrit College},
   year         = {1900},
   volume       = {3},
@@ -550,7 +550,7 @@ keywords={seclit},
 
 @book{lucknow2021,
   title     = {A Catalogue Of Manuscripts In Akhil Bharatiya Sanskrit Parishad},
-  editor    ={Shri K. A. Subramania Iyer and Shri G. C. Sinha and Dr. J. P. Sinha},
+  editor    ={Subramania Iyer, Shri K. A. and Sinha, Shri G. C. and Sinha, Dr. J. P.},
   year      = {2021},
   publisher = {Muthulakshmi Research Academy, Akhil Bharatiya Sanskrit Parishad},
   address   = {Lucknow}, 
@@ -584,7 +584,7 @@ keywords={seclit},
 }%!
 
 @article{ernst2003,
-  author = {Carl Ernst},
+  author = {Ernst, Carl},
   title  = {The Islamization of Yoga in the Amrtakunda Translations},
   journal = {Journal of the Royal Asiatic Society},
   series = {Series 3},
@@ -598,14 +598,14 @@ keywords={seclit},
 @incollection{ernst2013,
   title = {Chapter iv of the Bahr al-hayat},
   booktitle = {Yoga: The Art of Transformation},
-  author = {Ernst, Carl W.},
+  author = {Ernst, Carl},
   pages = {59--69},
   year = {2013},
-  editor = {Debra Diamond and Molly Emma Aitken},
+  editor = {Diamond, Debra and Aitken, Molly Emma},
   publisher = {Smithsonian Institution},
   address = {Washington, D.C.},
   note = {An adjunct to the Smithsonian exhibit, "Yoga: The Art of Transformation"},
-  authoraddon = {translated from the Persian by Carl W. Ernst},
+  authoraddon = {translated from the Persian by Carl Ernst},
   keywords= {seclit},   
 }%!
 
@@ -721,7 +721,7 @@ keywords={seclit},
   author = {Ganesan, T.},
   title = {Śaiva Āgamas: The Four Pādas and Thirty-six Tattvas},
   booktitle = {Brill’s Encyclopedia of Hinduism Online},
-  editor = {Knut A. Jacobsen and Helene Basu and Angelika Malinar and Vasudha Narayanan},
+  editor = {Jacobsen, Knut A. and Basu, Helene and Malinar, Angelika and Narayanan, Vasudha},
   publisher = {Brill},
   address = {Leiden}, 
   year = {2016},
@@ -965,7 +965,7 @@ keywords={primary},
 @misc{sarvangayoga,
   title={Sarvāṅgayogapradīpikā},
   subtitle={Sarvāṅgayogapradīpikā in the Sundargranthāvalī},
-  editor= {Misra, R.C.},
+  editor= {Misra, R. C.},
   year= {1992},
   publisher={Kitabghar},
   note={Delhi},
@@ -987,10 +987,10 @@ keywords={primary},
  }%!
 
 @incollection{stietencron1989,
-  author    = {Heinrich von Stietencron},
+  author    = {von Stietencron, Heinrich},
   title     = {Geplanter Synkretismus: Kaiser Akbars Religionspolitik},
   booktitle = {Die Religion von Oberschichten},
-  editor    = {Peter Antes and Donate Pahnke},
+  editor    = {Antes, Peter and Pahnke, Donate},
   publisher = {diagonal-Verlag},
   address   = {Marburg},
   year      = {1989},
@@ -1041,7 +1041,7 @@ keywords={primary},
 }%!
 
 @book{mw1899,
-  author       = {Sir M. Monier-Williams},
+  author       = {Monier-Williams, Sir M.},
   title        = {A Sanskrit-English Dictionary. Etymologically and Philologically Arranged with Special Reference to Cognate Indo-European Languages},
   edition      = {New edition, greatly enlarged and improved with the collaboration of E. Leumann and C. Cappeller and other scholars},
   year         = {1899},
@@ -1055,7 +1055,7 @@ keywords={primary},
   author    = {Brunner, Hélène},
   title     = {The Place of Yoga in the Śaivāgamas},
   booktitle = {Pandit N.R. Bhatt Felicitation Volume},
-  editor    = {Filliozat, P.-S. and Narang, S. P. and Bhatta, C. P.},
+  editor    = {Filliozat, P. S. and Narang, S. P. and Bhatta, C. P.},
   year      = {1994},
   pages     = {425--461},
   publisher = {Motilal Banarsidass},
@@ -1084,7 +1084,7 @@ keywords={seclit},
 
 @book{autobioyogi, 
 title={Autobiography of a Yogi}, 
-author={Paramahaṃsa Yogānanda}, 
+author={Yogānanda, Paramahaṃsa}, 
 year={1946}, 
 publisher={The Philosophical Library, Inc.}, 
 address={New York},
@@ -1104,7 +1104,7 @@ keywords={seclit},
 @misc{anandakanda,
   title = {Ānandakanda},
   subtitle = {Ānandakanda},
-  editor = {S. V. Radhakrishna Sastri},
+  editor = {Radhakrishna Sastri, S. V.},
   year = {1952},
   publisher = {Sri Vilasam Press},
   note = {Srirangam},
@@ -1123,19 +1123,19 @@ keywords={seclit},
 }%!
 
 @article{gladigow1995,
-    author= {Burghard Gladigow},
+    author= {Gladigow, Burghard},
      title= {Europäische Religionsgeschichte},
       year= {1995},
  publisher= {Diagonal Verlag},
    journal= {Lokale Religionsgeschichte},
      pages= {21--43},
-    editor= {Hans G. Kippenberg},
+    editor= {Kippenberg, Hans G.},
     keywords={seclit}, 
 }%!
 
 
 @book{karttunen1997,
-    author= {Klaus Karttunen},
+    author= { Karttunen, Klaus},
     title= {India and the Hellenistic World},
     year= {1997},
     publisher= {Finnish Oriental Society},
@@ -1144,19 +1144,19 @@ keywords={seclit},
 }%!
 
 @article{hanegraaff2004,
-     author={Wouter J. Hanegraaff},
+     author={Hanegraaff, Wouter J.},
      title= {The Study of Western Esotericism - New Approaches to Christian and Secular Culture},
      year= {2004},
      journal= {New Approaches to the Study of Religion - Volume I: Regional, Critical and Historical Approaches},
      volume= {1},
-     editor= {Peter Antes and Armin W. Geertz and Randi R. Warne},
+     editor= {Antes, Peter and Geertz, Armin W. and Warne, Randi R.},
      publisher= {Walter de Gruyter},
      address= {Berlin und New York},
      keywords={seclit},
 }%!
 
 @article{teacher2011,
-     author= {Gary Chicoine},
+     author= {Chicoine, Gary},
      title= {Hermetic Ontosophy — The Ultimate Esoteric Knowledge},
      month= {April},
      year= {2016},
@@ -1166,7 +1166,7 @@ keywords={seclit},
 }%!
      
 @article{bastow1978,
-	author= {David Bastow},
+	author= {Bastow, David},
 	title= {An Attempt to Understand Sāṁkhya-Yoga},
 	year= {1978},
 	journal= {Journal of Indian Philosophy},
@@ -1235,7 +1235,7 @@ keywords={seclit},
 @book{garbe1892,
 	author= {Vācaspatimiśra},
         year= {1892},
-	editor= {Richard Garbe},
+	editor= {Garbe, Richard},
 	title= {Der Mondschein der Sāṁkhya-Wahrheit: Vācaspatimiśra's Sāṁkhyatattvakaumudī in deutscher Übersetzung, nebst einer Einleitung über das Alter und die Herkunft der Sāṁkhya-Philosophie},
 	series= {Abhandlungen der Philosophisch-Philologischen Classe der 		Königlich Bayerischen Akademie der Wissenschaften, 19; 3. Abtheilung; Denkschrifen,LXIV, pp. 517–628.},
 	publisher= {Verlag der Königlichen Akademie},
@@ -1244,7 +1244,7 @@ keywords={seclit},
 }%!
 
 @article{larson1987,
-author= {Gerald James Larson},
+author= { Larson, Gerald James},
 year=   {1987},
 title= {The history and literature of Sāṁkhya},
 journal= {Encyclopedia of Indian Philosophies},
@@ -1256,7 +1256,7 @@ address= {Delhi},
 }%!
 
 @article{michelis2008,
-author= {Elizabeth de Michelis},
+author= {de Michelis, Elizabeth},
 year= {2008},
 title= {Modern Yoga: History and Forms},
 journal= {Yoga in the Modern World: Uses, Adaptations, Appropriations},
@@ -1268,11 +1268,11 @@ keywords={seclit},
 }%!
 
 @article{singleton2008,
-author= {Mark Singleton},
+author= {Singleton, Mark},
 year= {2008},
 title= {The Classical Reveries of Modern Yoga: Patañjali and Constructive Orientalism},
 journal= {Yoga in the Modern World: Uses, Adaptations, Appropriations},
-editor= {Jean Byrne, Mark Singleton},
+editor= {Byrne, Jean and Singleton, Mark},
 pages= {77--99},
 publisher= {Routledge},
 address= {London and New York},
@@ -1280,7 +1280,7 @@ keywords={seclit},
 }%!
 
 @book{jacobi1923,
-	author ={Hermann Jacobi},
+	author ={Jacobi, Hermann},
 	title ={Die Entwicklung der Gottesidee bei den Indern},
 	year ={1923},
 	publisher ={Kurt Schroeder Verlag},
@@ -1289,7 +1289,7 @@ keywords={seclit},
 }%!
 
 @misc{maas2006,
-	author= {Philipp André Maas},
+	author= {Maas, Philipp André},
 	subtitle= {Samādhipāda: das erste Kapitel des Pātañjalayogaśāstra zum ersten Mal kritisch ediert},
 	title= {Pātañjalayogaśāstra (Samādhipāda)}, 
 	year= {2006},
@@ -1301,7 +1301,7 @@ keywords={seclit},
 }%!
 
 @book{friedrich1997,
-	author= {Evira Friedrich},
+	author= {Friedrich, Evira},
 	title= {Yoga – Der indische Erlösungsweg – Das klassische System und seine Hintergründe},
 	year= {1997},
 	publisher= {Eugen Diederichs Verlag},
@@ -1311,7 +1311,7 @@ keywords={seclit},
 
 
 @book{michaels1998,
-	author ={Axel Michaels},
+	author ={Michaels, Axel},
 	title ={Der Hinduismus},
 	year ={1998},
 	publisher ={C. H. Beck},
@@ -1321,7 +1321,7 @@ keywords={seclit},
 
 
 @book{halbfass2000,
-	author ={Wilhelm Halbfass},
+	author ={Halbfass, Wilhelm},
 	title= {Karma und Wiedergeburt im indischen Denken}, 
 	year= {2000},
 	publisher= {Hugendubel (Diederichs) (Diederichs Gelbe Reihe)},
@@ -1331,7 +1331,7 @@ keywords={seclit},
 }%!
 
 @book{zander1999,
-	author= {Helmut Zander},
+	author= {Zander, Helmut},
 	title= {Geschichte der Seelenwanderung in Europa},
 	year= {1999},
 	publisher= {Wissenschaftliche Buchgesellschaft},
@@ -1341,7 +1341,7 @@ keywords={seclit},
 
 
 @article{ahn2001,
-	author= {Gregor Ahn},
+	author= {Ahn, Gregor},
 	title= {Unsterblichkeit - Auferstehung - Reinkarnation. Postmortalitätsmodelle in der europäischen Religionsgeschichte.},
 	year= {2000},
 	journal= {Reallexikon der Germanischen Altertumskunde, Ergänzungsausgabe zu Band 31},
@@ -1353,7 +1353,7 @@ keywords={seclit},
 
 
 @article{stolz1993,
-	author= {Fritz Stolz},
+	author= {Stolz, Fritz},
 	title= {Paradiese und Gegenwelten},
 	year= {1993},
 	journal= {Zeitschrift für Religionswissenschaft},
@@ -1366,7 +1366,7 @@ keywords={seclit},
 
 
 @article{baumann1997,
-	author= {Martin Baumann},
+	author= {Baumann, Martin},
 	title= {Hindus und Juden in globaler 'Zerstreuung'. Über den Vergleich zum Theoriebegriff Diaspora.},
 	year = {1997},
 	pages= {185--200},
@@ -1375,7 +1375,7 @@ keywords={seclit},
 }%!
 
 @article{urban2000,
-	author={Hugh G. Urban},
+	author={Urban, Hugh G.},
 	title= {Making a Place to Stand: Jonathan Z. Smith and the Politics and Poetics of Comparison},
 	year= {2000},
 	journal= {Method & Theory in the Study of Religion},
@@ -1386,7 +1386,7 @@ keywords={seclit},
 }%!
 
 @article{smith1982,
-	author= {Jonathan Z. Smith},
+	author= {Smith, Jonathan Z.},
 	title= {In Comparison a Magic Dwells},
 	year= {1982},
 	journal= {Imagining Religion - From Babylon to Jonestown},
@@ -1396,7 +1396,7 @@ keywords={seclit},
 }%!
 
 @article{holdrege1994,
-	author= {Barbara A. Holdrege},
+	author= {Holdrege, Barbara A.},
 	title= {Comparative Religion with a Difference},
 	year= {1994},
 	journal= {Ugo Bianchi (Hrsg.) The Notion of >Religion< in Comparative Research},
@@ -1417,7 +1417,7 @@ keywords={seclit},
 
 
 @book{ebeling2005,
-	author= {Florian Ebeling},
+	author= {Ebeling, Florian},
 	title= {Das Geheimnes des Hermes Trismegistos - Geschichte des Hermetismus von der Antike bis zur Neuzeit - Mit einem Vorwort von Jan Assmann},
 	year= {2005},
 	publisher= {Verlag C.H.Beck},
@@ -1427,7 +1427,7 @@ keywords={seclit},
 	
 
 @book{bryant2005,
-	author ={Edwin F. Bryant},
+	author ={Bryant, Edwin F.},
 	title ={The Yoga Sūtras Of Patañjali – A New Edition, Translation, and
 		Commentary},
 	year ={2005},
@@ -1437,11 +1437,11 @@ keywords={seclit},
 }%!
 
 @article{vandenbroek2005,
-	author= {Roelof van den Broek},
+	author= {van den Broek, Roelof},
 	title= {Hermes Trismegistus I: Antiquity},
 	year= {2005},
 	journal= {Dictionary of Gnosis and Western Esotericism},
-	editor= {Wouter J. Hanegraaff},
+	editor= {Hanegraaff, Wouter J.},
 	volume= {1},
 	pages= {474--478},
 	publisher= {Brill},
@@ -1451,11 +1451,11 @@ keywords={seclit},
 
 
 @article{vandenbroek2005a,
-	author= {Roelof van den Broek},
+	author= {van den Broek, Roelof},
 	title= {Hermetic Literature I: Antiquity},
 	year= {2005},
 	journal= {Dictionary of Gnosis and Western Esotericism},
-	editor= {Wouter J. Hanegraaff},
+	editor= {Hanegraaff, Wouter J.},
 	volume= {1},
 	pages= {487--499},
 	publisher= {Brill},
@@ -1464,11 +1464,11 @@ keywords={seclit},
 
 
 @article{vandenbroek2005b,
-	author= {Roelof van den Broek},
+	author= {van den Broek, Roelof},
 	title= {Hermetism},
 	year= {2005},
 	journal= {Dictionary of Gnosis and Western Esotericism},
-	editor= {Wouter J. Hanegraaff},
+	editor= {Hanegraaff, Wouter J.},
 	volume= {1},
 	pages= {558--570},
 	publisher= {Brill},
@@ -1478,7 +1478,7 @@ keywords={seclit},
 
 
 @book{eliade1960,
-	author ={Mircea Eliade},
+	author ={Eliade, Mircea},
 	title ={Yoga. Unsterblichkeit und Freiheit},
 	year = {1960},
 	publisher ={Rascher Verlag},
@@ -1488,7 +1488,7 @@ keywords={seclit},
 
 
 @book{deussen1897,
-	author ={Paul Deussen},
+	author ={Deussen, Paul},
 	title ={Sechzig Upanishad’s des Veda},
 	year ={1921},
 	publisher = {F. A. Brockhaus},
@@ -1498,7 +1498,7 @@ keywords={seclit},
 
 
 @book{gethin1998,
-     author= {Rupert Gethin},
+     author= {Gethin, Rupert},
      title= {The Foundations of Buddhism},
      year= {1998},
      publisher= {Oxford University Press},
@@ -1507,7 +1507,7 @@ keywords={seclit},
 }%!
 
 @book{boehme1989,
-	author= {Angelika Boehme},
+	author= {Boehme, Angelika},
 	title= {Die Lehre von der Seelenwanderung in der antiken griechischen und indischen Philosophie},
 	year= {1989},
 	publisher= {Universität Düsseldorf},
@@ -1519,7 +1519,7 @@ keywords={seclit},
 @inbook{colebrooke2014,
   title        = {Henry Thomas Colebrooke and the Western “Discovery” of the Yoga Sutra},
   booktitle    = {The Yoga Sutra of Patanjali: A Biography},
-  editor       = {David Gordon White},
+  editor       = {White, David Gordon},
   address      = {New Jersey}, 
   publisher    = {Princeton University Press},
   year         = {2014},
@@ -1564,7 +1564,7 @@ keywords={primary},
 @misc{kathaup,
   title={Kathopaniṣad},
   subtitle={Kathopanishad: With the Sanskrit Text, Anvaya, Vritti, Word Meaning, Translation, Notes and Index},
-  author={Sris Chandra Vasu},
+  author={Vasu, Sri Chandra},
   series={Vedanta Series},
   volume={No. 3.}, 
   year={1905},
@@ -1625,7 +1625,7 @@ keywords={seclit},
 @misc{hathapradipika2024,
   title={Haṭhapradīpikā},
   subtitle={Light on Haṭha: Haṭhapradīpikā - Critical Edition and annotated Translation (Printed Ed. Forthcoming)},
-  editor={James Mallinson and Jason Birch and Jürgen Hanneder and Mitsuyo Demoto and Nils Jacob Liersch},
+  editor={Mallinson, James and Birch, Jason and Hanneder, Jürgen and Demoto, Mitsuyo and Liersch, Nils Jacob},
   %year={2025},
   %note={forthcoming}, 
   note={Pondicherry},
@@ -1645,11 +1645,11 @@ keywords={seclit},
 }%!
 
 @incollection{birch2018proliferation,
-  author       = {Jason Birch},
+  author       = {Birch, Jason},
   title        = {The Proliferation of Āsanas in Late-Mediaeval Yoga Texts},
   booktitle    = {Yoga in Transformation: Historical and Contemporary Perspectives},
   year         = {2018},
-  editor       = {Karl Baier and Philipp A. Maas and Karin Preisendanz},
+  editor       = {Baier, Karl and Maas, Philipp A. and  Preisendanz, Karin},
   publisher    = {Vienna University Press},
   address      = {Vienna},
   pages        = {101--180},
@@ -1671,7 +1671,7 @@ keywords={seclit},
 
 @book{kowski1988,
   title={The Canon of the Śaivāgama and the Kūbjika Tantras of the Western Kaula Tradition},
-  editor={Dyczkowski, M.S.G.},
+  editor={Dyczkowski, M. S. G.},
   year={1988},
   series={The Suny Series in the Shaiva Traditions of Kashmir}, 
   publisher={The State University of New York Press},
@@ -1900,7 +1900,7 @@ keywords={seclit}
   title     = {Mokṣopāya},
   subtitle  = {Mokṣopāya. Textedition, Teil 1. Das erste und zweite Buch: Vairāgyaprakaraṇa, Mumukṣuvyahāraprakaraṇa},
   howpublished = {Anonymus Casmiriensis},
-  editor    = {Susanne Krause-Stinner},
+  editor    = {Krause-Stinner, Susanne},
   year      = {2014},
   publisher = {Harrassowitz Verlag},
   keywords  = {primary},
@@ -2223,7 +2223,7 @@ title={Vasiṣṭhasaṃhitā Yogakāṇḍa},
 subtitle={Vasiṣṭhasaṃhitā Yogakāṇḍa. Revised Edition}, 
 year={2005},
 note={first edition, 1984}, 
-editor={Digambarji, Swami and Jha, Pitambar and Sahay, Gyan Shankar and Maheshananda Swami and Sharma, B.R. and Sahay Shri G.S., and Bodhe, Shri R.K.Bodhe}, 
+editor={Digambarji, Swami and Jha, Pitambar and Sahay, Gyan Shankar and Maheshananda, Swami and Sharma, B. R. and Sahay, Shri G. S. and Bodhe, Shri R. K.}, 
 publisher={Kaivalyadhama S.M.Y.M. Samiti}, 
 note={Lonavla}, 
 keywords={primary}, 
@@ -2295,7 +2295,7 @@ keywords={primary},
 
 @book{brown1869,
    title={Sanskrit Prosody and Numerical Symbols Explained},
-   author={Brown, C.H.},
+   author={Brown, C. H.},
    year={1869},
    url={https://books.google.de/books?id=m7UIAAAAQAAJ&printsec=frontcover&redir_esc=y#v=onepage&q&f=false},
    publisher={Tübner \& Co.},
@@ -2337,10 +2337,10 @@ keywords={primary},
 }%!
 
 @incollection{maas2009,
-  author    = {Philipp Maas},
+  author    = {Maas, Philipp},
   title     = {The So-called Yoga of Suppression in the Pātañjala Yogaśāstra},
   booktitle = {Yogic Perception, Meditation, and Altered States of Consciousness},
-  editor    = {Eli Franco and Dagmar Eigner},
+  editor    = {Franco, Eli and Eigner, Dagmar},
   series    = {Sitzungsberichte der phil.-hist. Klasse},
   volume    = {794},
   number    = {Beiträge zur Kultur- und Geistesgeschichte Asiens 64},
@@ -2374,7 +2374,7 @@ keywords={primary},
 @book{jayasi1998,
   author    = {Muhammad Jāyasī, Mālik},
   title     = {Padmāvat: Mālik Muhammad Jāyasī Kṛt Mahākāvya},
-  editor    = {V. S. Agrawal},
+  editor    = {Agrawal, V. S.},
   year      = {1998},
   publisher = {Sahitya Sadan},
   address   = {Chirgaon},
@@ -2382,10 +2382,10 @@ keywords={primary},
 }%!
 
 @incollection{mallinson2021,
-  author    = {James Mallinson},
+  author    = {Mallinson, James},
   title     = {Nath Yogis and their ‘Amazing Apparel’ in Early Material and Textual Sources},
   booktitle = {Objects, Images, Stories},
-  editor    = {Francesca Orsini},
+  editor    = {Orsini, Francesca},
   year      = {2021},
   publisher = {Oxford University Press},
   doi       = {10.1093/oso/9780190123963.003.0004},
@@ -2417,7 +2417,7 @@ keywords={primary},
 }%!
 
 @article{sanderson2004,
-  author    = {Alexis Sanderson},
+  author    = {Sanderson, Alexis},
   title     = {Religion and the State: \textit{{\S}aiva Officiants} in the Territory of the Brahmanical Royal Chaplain (with an appendix on the provenance and date of the \textit{Netratantra})},
   journal   = {Indo-Iranian Journal},
   volume    = {47},
@@ -2587,7 +2587,7 @@ keywords={primary},
 @misc{singh2005paratrisika,
   title={Parātrīśikāvivaraṇa},
   subtitle = {Paratrisika Vivarana by Abhinavagupta: The Secret of Tantric Mysticism},
-   editor = {Jaideva Singh and Swami Lakshman-Joo and Bettina Bäumer},
+   editor = {Singh, Jaideva and Lakshman-Joo, Swami and Bäumer, Bettina},
   year = {2005},
   note = {New Delhi},
   publisher = {Motilal Banarsidass Publishers Pvt. Ltd},
@@ -2641,7 +2641,7 @@ keywords={primary},
 
 @book{dehaan1973,
   title={Enige aspecten van de tekstkritiek van Middelnederlandse teksten},
-  author= {De Haan, M.J.M},
+  author= {De Haan, M. J. M.},
   year={1973},
   publisher= {Elve/Labor Vincit},
   address= {Leiden},
@@ -2659,7 +2659,7 @@ keywords={seclit},
 
 @book{robson1988,
   title={Principles of Indonesian Philology},
-  author={Robson, S.O.},
+  author={Robson, S. O.},
   year={1988},
   publisher= {Dordrecht/Providence},
   address= {Foris},
@@ -2805,7 +2805,7 @@ keywords={primary},
 }%!
 
 @phdthesis{kropf2005,
-  author       = {Marianna Kropf},
+  author       = {Kropf, Marianna},
   title        = {Rituelle Traditionen der Planetengottheiten (Navagraha) im Kathmandutal. Strukturen – Praktiken – Weltbilder},
   school       = {Universität Heidelberg},
   year         = {2005},
@@ -2825,7 +2825,7 @@ keywords={primary},
  }%!
 
 @book{slaje2014,
-  author    = {Walter Slaje},
+  author    = {Slaje, Walter},
   title     = {Kingship in Kaśmīr (AD 1148-1459). From the Pen of Jonarāja, Court Paṇḍit to Sulṭān Zayn al-Ābidīn. Critically Edited by Walter Slaje with an Annotated Translation, Indexes and Maps},
   year      = {2014},
   publisher =  {Halle},
@@ -2836,7 +2836,7 @@ keywords={primary},
 }%!
 
 @book{wilke2011,
-  author    = {Annette Wilke and Oliver Moebus},
+  author    = {Wilke, Annette and Moebus, Oliver},
   title     = {Sound and Communication: An Aesthetic Cultural History of Sanskrit Hinduism},
   year      = {2011},
   publisher = {Walter de Gruyter},
@@ -2844,7 +2844,7 @@ keywords={primary},
 }%!
 
 @book{nandikesvara1917,
-  author       = {Nandikeśvara and Ananda Kentish Coomaraswamy and Gopala Kristnayya Duggirala},
+  author       = {Nandikeśvara and Kentish Coomaraswamy, Ananda and Kristnayya Duggirala, Gopala},
   title        = {The Mirror of Gesture, Being the Abhinaya Darpana of Nandikeśvara},
   year         = {1917},
   publisher    = {Harvard University Press},
@@ -2854,7 +2854,7 @@ keywords={primary},
 }%!
 
 @book{geldner1907,
-  author    = {Karl F. Geldner},
+  author    = {Geldner, Karl F.},
   title     = {Der Rigveda in Auswahl. Erster Teil. Glossar},
   year      = {1907},
   publisher = {Stuttgart},
@@ -2864,9 +2864,9 @@ keywords={primary},
 
 @inbook{mallinson2018vajrolimudra,
   title        = {Yoga and Sex: What is the Purpose of Vajrolīmudrā?},
-  author       = {James Mallinson},
+  author       = {Mallinson, James},
   booktitle    = {Yoga in Transformation: Historical and Contemporary Perspectives},
-  editor       = {Karl Baier and Philipp A. Maas and Karin Preisendanz},
+  editor       = {Baier, Karl and Maas, Philipp A. and Preisendanz, Karin},
   year         = {2018},
   publisher    = {V \& R unipress},
   address      = {Göttingen},
@@ -2917,7 +2917,7 @@ keywords={primary},
   publisher    = {Vani Vilas Press},
   note      = {Varanasi},
   editor       = {Veda Nidhi Varanasi}, 
-   keywords={primary},
+  keywords={primary},
 }%!
 
 @misc{MallinsonGheranda,
@@ -2997,7 +2997,7 @@ keywords={primary},
 @misc{ssplonavla,
     title={Siddhasiddhāntapaddhati},
     subtitle= {Siddhasiddhāntapaddhatiḥ: A treatise on the Nātha philosophy by Gorakṣanātha},
-    editor={Gharote, Dr. M. L. and Pai, Dr. G. K.},
+    editor={Gharote, M. L. and Pai, G. K.},
     year={2016},
     publisher={The Lonavla Yoga Institute},
     note={Lonavla},
@@ -3015,7 +3015,7 @@ keywords={primary},
 
 @book{encyclopediaasana,
     title={Encyclopedia of Traditional Asanas},
-    editor={Gharote, Dr. M. L. and Jha, Dr. V. K. and Devnath, Dr. Parimal and Sakhalkar, Dr. S. B.},
+    editor={Gharote, M. L. and Jha, V. K. and Devnath, Parimal and Sakhalkar, S. B.},
     year={2006},
     publisher={The Lonavla Yoga Institute},
     address={Lonavla},
@@ -3195,7 +3195,7 @@ howpublished={Ms. No. 46/440. Unpublished manuscript. Bhārat Itihās Samśodhak
 @misc{yogacintamani,
   title={Yogacintāmaṇi},
   subtitle={Yogacintāmaṇi},
-  editor={Haridāsa Śarma},
+  editor={Śarma, Haridāsa},
   publisher={Calcutta Oriantal Press},
   note={Calcutta},
   keywords={primary},
@@ -3207,7 +3207,7 @@ howpublished={Ms. No. 46/440. Unpublished manuscript. Bhārat Itihās Samśodhak
   subtitle={Pātañjalayogasūtrāṇi vācaspatimiśraviracitaṭīkāsaṃvalitavyāsabhāṣyasametāni tathā bhojadevaviracitarājamārtaṇḍābhidhavṛttisametāni},
   year={1904},
   howpublished={Ānandāśramasaṃskṛtagrathāvaliḥ. Vol. 47},
-  editor={Kāśīnātha Śāstri Āgāśe},
+  editor={Śāstri Āgāśe, Kāśīnātha},
   publisher={Ānandāśramamudraṇālaya},
   note={Pune},
   keywords={primary},
@@ -3216,7 +3216,7 @@ howpublished={Ms. No. 46/440. Unpublished manuscript. Bhārat Itihās Samśodhak
 @misc{kashikhanda1998,
     title        = {Kāśīkhaṇḍa},
     subtitle     = {Kāśīkhaṇḍa (Skandapurāṇa)},
-    editor       = {Karuṇāpaṭī Tripāṭhī},
+    editor       = {Tripāṭhī, Karuṇāpaṭī},
     year         = {1998},
     publisher    = {Sampūrnānand Sanskrit University},
     note         = {Vārāṇasī},
@@ -3251,10 +3251,10 @@ howpublished={Ms. No. 46/440. Unpublished manuscript. Bhārat Itihās Samśodhak
 
 
 @inbook{lipner2004,
-  author      = {Julius Lipner},
+  author      = {Lipner, Julius},
   title       = {Hinduism: The Way of the Banyan},
   booktitle   = {The Hindu World},
-  editor      = {Sushil Mittal and Gene Thursby},
+  editor      = {Mittal, Sushil and Thursby, Gene},
   publisher   = {Routledge},
   year        = {2004},
   pages       = {9--36},
@@ -3262,7 +3262,7 @@ howpublished={Ms. No. 46/440. Unpublished manuscript. Bhārat Itihās Samśodhak
 }%!
 
 @misc{rajayoga, 
-  title={Rājayogaḥ},
+  title={Rājayoga},
   subtitle={Rājayogaḥ of Śrī Agasthyamaunīndra},
   howpublished={Ms. No. R 17980. Transcribed by Jason Birch. Government Oriental Manuscript Library, Madras University, Chennai},
   keywords={primary},
@@ -3364,7 +3364,7 @@ howpublished={Ms. No. 46/440. Unpublished manuscript. Bhārat Itihās Samśodhak
 @misc{shabdakalpadruma,
   title={Śabdakalpadruma},
   subtitle={Śabdakalpadruma},
-  editor={Deva Radhakanta and Vasu Varadaprasada and Vasu Haricana},
+  editor={Radhakanta, Deva and Varadaprasada, Vasu and Haricana, Vasu},
   year={1967},
   note={Varanasi},
   publisher={Varanasi Caukhamba Samskrita Sirija Aphisa},
@@ -3382,7 +3382,7 @@ howpublished={Ms. No. 46/440. Unpublished manuscript. Bhārat Itihās Samśodhak
 }%!
 
 @book{jahangir1999,
-  author    = {Salīm Nūruddīn Jahangir},
+  author    = {Jahangir, Salīm Nūruddīn},
   title     = {The Jahangirnama: Memoirs of Jahangir, Emperor of India},
   translator = {Wheeler M. Thackston},
   year      = {1999},
@@ -3392,7 +3392,7 @@ howpublished={Ms. No. 46/440. Unpublished manuscript. Bhārat Itihās Samśodhak
 }%!
 
 @article{eaton2001,
-  author  = {Richard Eaton},
+  author  = {Eaton, Richard},
   title   = {Temple Desecration and Indo-Muslim States},
   journal = {Frontline},
   date    = {2001-01-05},
@@ -3402,7 +3402,7 @@ howpublished={Ms. No. 46/440. Unpublished manuscript. Bhārat Itihās Samśodhak
 }%!
 
 @book{titus1979,
-  author    = {Murray T. Titus and E.C. Dewick},
+  author    = {Titus, Murray T. and Dewick, E. C.},
   title     = {Indian Islam},
   year      = {1979},
   publisher = {Munshiram Manoharlal Publishers},
@@ -3412,7 +3412,7 @@ howpublished={Ms. No. 46/440. Unpublished manuscript. Bhārat Itihās Samśodhak
 }%!
 
 @book{hooja2006,
-  author    = {Rima Hooja},
+  author    = {Hooja, Rima},
   title     = {A History of Rajasthan},
   year      = {2006},
   publisher = {Rupa \& Company},
@@ -3442,7 +3442,7 @@ howpublished={Ms. No. 46/440. Unpublished manuscript. Bhārat Itihās Samśodhak
 @misc{gorakbhani,
   title={Gorakhbhāṇī},
   subtitle={Gorakhbhāṇī},
-  editor={Baḍathvāl, P.D.},
+  editor={Baḍathvāl, P. D.},
   year={1960},
   publisher={Hindī Sāhity Sammelan},
   note={Prayāg},
@@ -3761,7 +3761,7 @@ subtitle={The Niśvāsatattvasaṃhitā: The Earliest Surviving Śaiva Tantra},
 }%!
 
 @misc{upanishads1938,
-  author = {Kunjan Raja},
+  author = {Raja, Kunjan},
   title = {Unpublished Upanishads},
   subtitle = {Unpublished Upanishads},
   year = {1938},
@@ -3922,8 +3922,7 @@ address={Delhi},
 
 @misc{hp,
    title={Haṭhapradīpikā},
-   subtitle={Haṭhapradīpikā},
-   author={Svātmarāma},
+   subtitle={Haṭhapradīpikā of Svātmarāma},
    editor={Digambarjī, Svāmi and Pīrāmbar, Jhā},
    year={1970},
    publisher={Kaivalyadhāma S. M. Y. M. Samiti},
@@ -3975,7 +3974,7 @@ address={Delhi},
 @misc{liersch2023,
   title={Gorakṣayogaśāstra},
   subtitle={Das Gorakṣayogaśāstra: Diplomatische und kritische Edition mit annotierter Übersetzung (Forthcoming)},
-  editor={Nils Jacob Liersch},
+  editor={Liersch, Nils Jacob},
   publisher={Indica et Tibetica Verlang},
   note={Marburg},
   keywords={primary},
@@ -4072,7 +4071,7 @@ address={Delhi},
 
 @online{hyp-website, 
   title={Haṭha Yoga Project},
-  author={James Mallinson and Jason Birch and Marc Singleton and Daniel Bevilacqua and S. V. B. K. V. Gupta}, 
+  author={Mallinson, James and Birch, Jason and Singleton, Marc and Bevilacqua, Daniel and Gupta, S. V. B. K. V.}, 
   publisher={SOAS University of London},
   howpublished={\url{https://web.archive.org/web/20240516171430/http://hyp.soas.ac.uk/}}, 
   note={\url{https://web.archive.org/web/20240516171430/http://hyp.soas.ac.uk/}; Saved on archive.org: 04.10.2023},  
@@ -4149,7 +4148,7 @@ address={Delhi},
 
 @online{kriyakrama,
   title = {Kriyakramadyotikavyākhyā},
-  author ={kacchapeśvaraśivācārya},
+  author ={Kacchapeśvaraśivācārya},
   organization = {Muktabodha Indological Research Institute (MIRI)}, 
   howpublished = {\url{https://muktalib7.com/}},
   note = {\url{https://muktalib7.com/}; Accessed: 02/17/2023; Catalog number : M00324; IFP transcript T00109}, 
