--- a/intro.bib
+++ b/intro.bib
@@ -3750,7 +3750,7 @@ subtitle={The Niśvāsatattvasaṃhitā: The Earliest Surviving Śaiva Tantra},
    keywords={seclit},
 }
 
-@book{yogaupaniṣaded,
+@misc{yogaupaniṣaded,
    title={Yoga Upaniṣads},
    subtitle={Yoga Upaniṣads with the Commentary of Śrī Upaniṣadbrahmayogin},
    year={1968},
